<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IVE-LGE</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_test">Create new test</string>
    <string name="title_activity_test_detail">TestDetail</string>
    <string name="title_activity_settings">Settings</string>
    <string name="server_address">Server Address</string>
    <string name="save_btn">Save</string>
    <string name="title_activity_participant_detail">Participant</string>
    <string name="pretest">Pre-test interview</string>
    <string name="posttest">Post-test interview</string>
    <string name="view_log">View Log</string>
    <string name="start_session">Start Session</string>
    <string name="show_on_map_btn">Show on map</string>
    <string name="comments_btn">Comments</string>
    <string name="title_activity_log">Participant</string>
    <string name="log">Log</string>
    <string name="map">Map</string>
    <string name="final_time">Final time: </string>
    <string name="test_list_item_participants">Participants</string>
    <string name="test_detail_list_item_finished">Finished:</string>
    <string name="test_detail_list_item_duration">Duration:</string>
    <string name="test_detail_list_item_logs">Logs:</string>
    <string name="log_item_priority_label">"Priority "</string>
    <string name="title_activity_new_test">New Test</string>
    <string name="new_test_name_label">Name</string>
    <string name="new_test_participants_label">Participants</string>
    <string name="new_test_tasks_label">Tasks</string>
    <string name="title_activity_event_detail">Event Detail</string>
    <string name="title_activity_new_event">New Event</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_event_edit">EventEditActivity</string>
    <string name="title_activity_start_session">Participant</string>
    <string name="end_session">End Session</string>
    <string name="ip_hint">Enter server IP...</string>
    <string name="category_label">Category</string>
    <string name="subcategory_label">Subcategory</string>
    <string name="comments">Comments...</string>
    <string name="new_event_discard">Discard</string>

    <string-array name="priority_array">
        <item>Priority 1</item>
        <item>Priority 2</item>
        <item>Priority 3</item>
        <item>Priority 4</item>
        <item>Priority 5</item>
    </string-array>

    <string name="title_activity_session">Session</string>

    <string name="title_log">Log</string>
    <string name="title_map">Map</string>

    <string name="action_newEvent">New Event</string>
    <string name="action_endSession">End Session</string>

</resources>
