<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="cz.ctu.pda.ivelge.ParticipantDetailActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pretest"
        android:textAppearance="?android:textAppearanceMedium"
        />
    <EditText
        android:id="@+id/pretest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/posttest_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/posttest"
        android:textAppearance="?android:textAppearanceMedium"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/posttest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <Button
        android:id="@+id/view_log_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_log"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:onClick="viewLog"/>
    <Button
        android:id="@+id/start_session_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_session"
        android:layout_gravity="center_horizontal"
        android:onClick="startSession"/>
</LinearLayout>
